implement visualization for assembled runs